# Pico-CI

./: CMakeLists.txt  README.md  blink.c  runner_setup.sh
.github/workflows/: pico-ci.yml  ping.yml
blink/: CMakeLists.txt  blink.c
